# ConductorLogFoo

./: .gitignore  CMakeLists.txt  ConductorLogFoo.pro  ConductorLogFoo.rc  README.md
.github/workflows/: cmake.yml
ci/: qt.qs
install/: NSIS.template.in  install.nsi
src/: calendarrangewidget.cpp  calendarrangewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  queryrunner.cpp  queryrunner.h
ui/: mainwindow.ui
